--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "@cotars/buffer",
   "version": "1.0.0",
   "description": "",
+  "keywords": [
+    "typescript", "buffer", "serialize", "deserialize", "schema", "cotars.io", "cotars"
+  ],
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc"
   },
-  "author": "",
+  "author": "cotars.io",
   "license": "ISC",
   "devDependencies": {
     "typescript": "^3.9.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/cotars-io/buffer.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cotars-io/buffer/issues"
+  },
+  "homepage": "https://github.com/cotars-io/buffer#readme"
 }
