--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,15 @@
 {
     "compilerOptions": {
         "outDir": "lib",
-        "module": "commonjs",
+        "module": "ES6",
         "lib": ["es6", "dom"],
         "target": "es5",
         "declaration": true,
         "experimentalDecorators": true,
         "noImplicitAny": false,
-        "sourceMap": true
+        "sourceMap": true,
+        "strict": true,
     },
-    "include": [
-      "src/**/*.ts", "src/test.ts"
-    ]
+    "include": ["src"],
+    "exclude": ["node_modules", "dist"]
 }
