--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "keywords": [
-    "typescript", "buffer", "serialize", "deserialize", "schema", "cotars.io", "cotars"
+    "typescript",
+    "buffer",
+    "serialize",
+    "deserialize",
+    "schema",
+    "cotars.io",
+    "cotars"
   ],
   "main": "index.js",
   "scripts": {
@@ -13,6 +19,8 @@
   "author": "cotars.io",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^14.0.13",
+    "easy-monitor": "^2.2.8",
     "typescript": "^3.9.5"
   },
   "repository": {
